adding all put routes and adding jest
